--- a/app/views/board/index.html.erb
+++ b/app/views/board/index.html.erb
@@ -2,7 +2,7 @@
   <div class='container'>  
   
       <h1>게시판</h1>
-      <form action ="board/create" method="post">
+      <form action ="/board/create" method="post">
         <div class="form-group">
           <input type="text" class="form-control" name="title" placeholder="제목">
         </div>
@@ -12,13 +12,17 @@
         <button type="submit" class="btn btn-default">글쓰기</button>
       </form>
       
-      <% @posts.each do |post|%> <!-- '< % 안에는 루비 언어로 처리,해석 하겠다  = 는 출력 -->
+      <% @posts.each do |p|%> <!-- '< % 안에는 루비 언어로 처리,해석 하겠다  = 는 출력 -->
         <!-- 모든 게시판 글을 뽑아서 하나씩 |post| 에 임시적으로 저장해서-->
         <!-- 이 안에서 계속 사용하겠다 posts를-->
         <hr>
-        <p>제목</p><%= post.title %><br><br>
-        <p>내용</p><%= post.content %><br><br>
-        <p> 작성 날짜</p><p><%= post.created_at %></p><br>
+        <p>제목</p><%= p.title %><br><br>
+        <p>내용</p><%= p.content %><br><br>
+        <p> 작성 날짜</p><p><%= p.created_at %></p><br>
+        
+        <a href ="/update_view/<%=p.id%>"> [수정] </a>
+        <a href="/destroy/<%=p.id%>"> [삭제] </a>
+        
         <hr>
       <% end %>
       
