login_and)board

--- a/app/views/board/index.html.erb
+++ b/app/views/board/index.html.erb
@@ -1,7 +1,10 @@
 
   <div class='container'>  
-  
-      <h1>게시판</h1>
+    <div >  
+      <a href="/users/sign_out">로그 아웃</a>
+      <h1 align="left">게시판</h1>
+      
+    </div>  
       <form action ="/board/create" method="post">
         <div class="form-group">
           <input type="text" class="form-control" name="title" placeholder="제목">
@@ -16,12 +19,27 @@
         <!-- 모든 게시판 글을 뽑아서 하나씩 |post| 에 임시적으로 저장해서-->
         <!-- 이 안에서 계속 사용하겠다 posts를-->
         <hr>
+        <p>글쓴이</p><%= current_user.email%><br><br><br>
         <p>제목</p><%= p.title %><br><br>
         <p>내용</p><%= p.content %><br><br>
         <p> 작성 날짜</p><p><%= p.created_at %></p><br>
         
         <a href ="/update_view/<%=p.id%>"> [수정] </a>
         <a href="/destroy/<%=p.id%>"> [삭제] </a>
+        <br><br>
+        <!--댓글 달기-->
+        <form action ="/reply_create" method="post">
+          <input type="hidden" value="<%p.id%>" name="id_of_post"/>
+          <div class="form-group">
+            <input type="text" class="form-control" name="reply_content" placeholder="댓글을 써주세요">
+          </div>
+          <button value="<%p.id%>" type="submit" class="btn btn-default reply_create">댓글 쓰기</button>
+        </form>
+        
+        <%p.replies.each do |rpy|%>
+        <p><%=rpy.content%></p>
+        <% end %>
+        
         
         <hr>
       <% end %>
